Fixes issue with bottom pagination button visible through footer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,6 @@ html {
 
 body {
   padding-top: 60px;
-  padding-bottom: 75px;
 }
 
 /* Devise views styling */
@@ -48,7 +47,7 @@ body {
 /* Footer */
 
 footer {
-  position:fixed;
+  position: static;
   left:0px;
   bottom:0px;
   height:50px;
